# options_algo_v2

./: .gitignore  README.md  pyproject.toml
config/: risk_v1.yaml  strategy_v1.yaml  universe_v1.yaml
docs/: ENHANCEMENT_PLAN.md  IMPLEMENTATION_TRACKER.md  OPERATOR_QUICKSTART.md  RUNBOOK.md  dashboard_integration.md  execution.md  go_live_phases.md  live_status_summary.md  options_watchlist_policy.md  rulebook.md  simulation.md  stage_a_tasks.md  status_update.md  strategy.md  v2.1_upgrade_plan.md  vision.md  watchlist_design.md
scripts/: backfill_iv_and_features.py  backfill_scan_analytics_sqlite.py  build_openclaw_options_report.py  build_options_context_snapshot.py  build_options_watchlist.py  build_watchlist.py  debug_polygon_chain_payload.py  filter_options_watchlist.py  inspect_scan_debug.py  inspect_scan_result.py  paper_live_symbol_leaderboard.py  refresh_market_state_sqlite.py  review_paper_live_logs.py  review_recent_scans.py  review_scan_analytics_sqlite.py  run_dynamic_paper_live_daily.sh  run_nightly_scan.py  run_paper_live_daily.py  run_premarket_status_only.sh  run_sample_scan.py  run_strict_live_scan.py  run_trade_ideas.py  show_databento_runtime_info.py  test_live_historical_rows.py  test_live_options_chain.py  test_shadow_single_leg_positive_path.py  test_single_leg_candidate_generation.py
src/options_algo_v2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_build_options_context_snapshot.py  test_options_context_service.py
tests/unit/: test_bar_history_builder.py  test_batch_evaluator.py  test_best_trade_candidate_selector.py  (+89 more)
(+127 files in other folders)
