[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "options_algo_v2"
version = "0.1.0"
description = "Production-grade options signal engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
pretty = true
mypy_path = "src"

[tool.setuptools.packages.find]
where = ["src"]
